cpp/test/Slice/errorDetection/IllegalUseOfKeyword.err
IllegalUseOfKeyword.ice:8: keyword `module' cannot be used as exception name
IllegalUseOfKeyword.ice:8: exceptions cannot be forward declared
IllegalUseOfKeyword.ice:9: keyword `void' cannot be used as exception name
IllegalUseOfKeyword.ice:14: keyword `exception' cannot be used as struct name
IllegalUseOfKeyword.ice:14: structs cannot be forward declared
IllegalUseOfKeyword.ice:15: keyword `class' cannot be used as struct name
IllegalUseOfKeyword.ice:20: keyword `interface' cannot be used as class name
IllegalUseOfKeyword.ice:21: keyword `struct' cannot be used as class name
IllegalUseOfKeyword.ice:23: syntax error
IllegalUseOfKeyword.ice:28: keyword `extends' cannot be used as interface name
IllegalUseOfKeyword.ice:35: keyword `implements' cannot be used as operation name
IllegalUseOfKeyword.ice:37: keyword `throws' cannot be used as an identifier
IllegalUseOfKeyword.ice:37: keyword `void' cannot be used as an identifier
IllegalUseOfKeyword.ice:39: keyword `byte' cannot be used as an identifier
IllegalUseOfKeyword.ice:39: keyword `short' cannot be used as an identifier
IllegalUseOfKeyword.ice:44: keyword `int' cannot be used as an identifier
IllegalUseOfKeyword.ice:45: keyword `long' cannot be used as an identifier
IllegalUseOfKeyword.ice:46: keyword `float' cannot be used as an identifier
IllegalUseOfKeyword.ice:47: keyword `double' cannot be used as an identifier
IllegalUseOfKeyword.ice:50: keyword `Object' cannot be used as sequence name
IllegalUseOfKeyword.ice:54: keyword `string' cannot be used as enumeration name
IllegalUseOfKeyword.ice:61: keyword `sequence' cannot be used as enumerator
IllegalUseOfKeyword.ice:62: keyword `dictionary' cannot be used as enumerator
IllegalUseOfKeyword.ice:63: keyword `enum' cannot be used as enumerator
IllegalUseOfKeyword.ice:67: illegal inheritance from type Object
